<resources>
    <string name="app_name">ThumbFight</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="start_game">Start Game</string>
    <string name="default_player">--</string>
    <string name="press_start_game">Press Start Game</string>
    <string name="score_text">Score: %d</string>
    <string name="time_left_text"> "Time Left: %d secs"</string>
    <string name="tie_message">"It's a TIE!!"</string>
    <string name="winner_message">"Winner is: %s"</string>
    <string name="game_over_text">Game Over</string>
    <string name="ok_button">OK</string>
</resources>